Changed to link to video

--- a/index.html
+++ b/index.html
@@ -130,7 +130,8 @@
                 <span class="tabs" onclick="showMethod('./drone/droneinit')">DroneMover-1: Init</span>
                 <span class="tabs" onclick="showMethod('./drone/dronevel')">DroneMover-2: Vel</span>
                 <span class="tabs" onclick="showMethod('./drone/droneupdatePIDS')">DroneMover-3: UpdatePIDs</span>
-                <span class="tabs" onclick="showMethod('./drone/dronesetsetpoints')">DroneMover-4: UpdateSetpoints</span>
+                <span class="tabs" onclick="showMethod('./drone/dronesetsetpoints')">DroneMover-4:
+                    UpdateSetpoints</span>
                 <span class="tabs" onclick="showMethod('./droneMover/dronePID')">DronePID-1: Init</span>
                 <span class="tabs" onclick="showMethod('./droneMover/setSetpoint')">DronePID-2: SetSetpoint</span>
                 <span class="tabs" onclick="showMethod('./droneMover/update')">DronePID-3: Update</span>
@@ -144,7 +145,7 @@
                 <span class="tabs" onclick="showMethod('./wifi/wificlose')">WiFi-6: Close</span>
             </div>
             <span id="codeText">
-                Select a function. You can enable and disable the audio with the checkbox at the top of the screen. 
+                Select a function. You can enable and disable the audio with the checkbox at the top of the screen.
             </span>
             <audio id="audio"></audio>
         </div>
@@ -152,7 +153,7 @@
             src="https://docs.google.com/document/d/125U-TmGVD1vz8xl9wleaXkM1f2dlKZ03laO5L4JE1Do/edit?tab=t.0"
             frameborder="0"></iframe>
         <div id="videos">
-            <video controls height="512vh" src="https://drive.google.com/file/d/1W12qNf7fSnbD9BuAGnFUBx3VI28pOYzU/view?usp=sharing" frameborder="0" class="video"></video>
+            <a href="https://drive.google.com/file/d/1W12qNf7fSnbD9BuAGnFUBx3VI28pOYzU/view?usp=sharing" id="videoText">Click Here for Video<a>
         </div>
     </div>
 </body>
